--- a/src/css/Tarea.css
+++ b/src/css/Tarea.css
@@ -11,6 +11,15 @@
     border: 1px solid white;
     cursor: pointer;
 }
+.tarea-contenedor:nth-child( 3n + 1 ) {
+    background: #1b1b32;
+}
+.tarea-contenedor:nth-child( 3n + 2 ) {
+    background: #2a2a40;
+}
+.tarea-contenedor:nth-child( 3n + 3 ) {
+    background: #3b3b4f;
+}
 .tarea-txt{
     width: 100%;
     height: 100%;
