--- a/src/css/Tarea.css
+++ b/src/css/Tarea.css
@@ -34,6 +34,6 @@
     margin: 5px;
 }   
 .completada{
-    background-color: #5a01a7;
+    background-color: #5a01a7!important;
     text-decoration: line-through;
 }
